MDEV-17832 Protocol: extensions for Pluggable types and JSON, GEOMETRY